force-app/main/default/objects/Assessment_Response__c/Assessment_Response__c.object-meta.xml
<CustomObject>
    <label>Assessment Response</label>
    <nameField>
        <displayFormat>ARR-{0000000}</displayFormat>
        <label>Assessment Response Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>