force-app/main/default/objects/Assessment_Response__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>Total_Points__c / (Total_Questions__c * 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>