force-app/main/default/objects/Assessment_Response__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>Question_Response__c.Response__c</summarizedField>
    <summaryForeignKey>Question_Response__c.Assessment_Response__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>