force-app/main/default/objects/Assessment_Response__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <label>Total Questions</label>
    <summaryForeignKey>Question_Response__c.Assessment_Response__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>